--- a/css/style.css
+++ b/css/style.css
@@ -239,7 +239,7 @@ a {
 ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~*/
 
 #content-container {
-  background-color: #DDDDDD;
+  background-color: white;
   box-shadow: 0px 5px 20px #333333;
 }
 
@@ -271,7 +271,7 @@ a {
 
 #menu-container div:not(:first-child) {
   background-color: white;
-  box-shadow: 2px 2px 4px #BBBBBB;
+  box-shadow: 2px 2px 6px #BBBBBB;
   width: 330px;
 }
 
